[package]
name = "loginator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
btleplug = "0.11.1"
clap = "4.4.4"
config = "0.13.3"
futures = "0.3.28"
rand = "0.8.5"
regex = "1.9.5"
rumqttc = "0.22.0"
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.4.1"
