[package]
name = "loginator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.48"

tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

btleplug = "0.11.1"
uuid = "1.4.1"
rumqttc = "0.22.0"

clap = { version = "4.4.4", features = ["derive"] }
confy = "0.5.1"
colored = "2.0.4"

regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
